--- a/style.css
+++ b/style.css
@@ -59,6 +59,17 @@ li{
     color: red;
 }
 
+/* Table Content Classes */
+
+table, th, td {
+   border: 1px solid black;
+    padding: 0, 5px;
+}
+
+th{
+    text-align: left;
+}
+
 /* Footer Content Classes */
 .footerSect{
     display: flex;
